<resources>
    <string name="app_name">Budget Planner for Freelancers</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="donate_intro">Budget Planner for Freelancers is and will always be free. Furthermore, you\'ll never see ad here!\n\nThis is why our team (me, my girlfriend and dear users who support this app with donations) needs your help.\n</string>
    <string name="donate_reward_description">We will appreciate your help and will be glad to include you (or your brand) to the list of our sponsors below!\n\nThere are 3 types of sponsorship subscriptions:</string>
    <string name="donate_sponsor_type_1_label">Super(wo)man</string>
    <string name="donate_sponsor_type_1_amount">$1 to $2.99</string>
    <string name="donate_sponsor_type_1_features">Your name will appear in the sponsors list below.</string>
    <string name="donate_button">Become {type}!</string>
    <string name="donate_before_amount">I can donate $</string>
    <string name="donate_after_amount">per month.</string>
</resources>