<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools" android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="?attr/actionBarSize" android:textAlignment="center">

<!--    Todo: fix padding bottom-->
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingBottom="?attr/actionBarSize" android:scrollbarStyle="outsideInset"
            tools:layout_editor_absoluteY="56dp">
        <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent"
                      android:orientation="vertical">
            <TextView
                    android:text="@string/donate_intro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textView2"/>
            <TextView
                    android:text="@string/donate_reward_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textView4"/>
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                    <TextView
                            android:text="@string/donate_sponsor_type_1_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" android:id="@+id/textView9" android:layout_weight="1"
                            android:layout_marginRight="5sp"/>
                    <TextView
                            android:text="@string/donate_sponsor_type_1_amount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" android:id="@+id/textView10"
                            android:layout_weight="1" android:textColor="#B1B1B1"/>
                </LinearLayout>
                <TextView
                        android:text="@string/donate_sponsor_type_1_features"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/textView8" android:layout_weight="1"
                        android:layout_marginTop="7sp"/>
            </LinearLayout>

            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                    <TextView
                            android:text="@string/donate_sponsor_type_1_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" android:id="@+id/textView9" android:layout_weight="1"
                            android:layout_marginRight="5sp"/>
                    <TextView
                            android:text="@string/donate_sponsor_type_1_amount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" android:id="@+id/textView10"
                            android:layout_weight="1" android:textColor="#B1B1B1"/>
                </LinearLayout>
                <TextView
                        android:text="@string/donate_sponsor_type_1_features"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/textView8" android:layout_weight="1"
                        android:layout_marginTop="7sp"/>
            </LinearLayout>

            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                    <TextView
                            android:text="@string/donate_sponsor_type_1_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" android:id="@+id/textView9" android:layout_weight="1"
                            android:layout_marginRight="5sp"/>
                    <TextView
                            android:text="@string/donate_sponsor_type_1_amount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" android:id="@+id/textView10"
                            android:layout_weight="1" android:textColor="#B1B1B1"/>
                </LinearLayout>
                <TextView
                        android:text="@string/donate_sponsor_type_1_features"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/textView8" android:layout_weight="1"
                        android:layout_marginTop="7sp"/>
            </LinearLayout>

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                <TextView
                        android:text="@string/donate_before_amount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/textView11" android:layout_weight="1"/>
                <EditText
                        android:layout_width="@dimen/number_input_width_small"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:ems="10"
                        android:id="@+id/editTextNumber" android:text="1" android:textAlignment="center"/>
                <TextView
                        android:text="@string/donate_after_amount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/textView12" android:layout_weight="1"/>
            </LinearLayout>

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:text="My Name"
                    android:ems="10"
                    android:id="@+id/editName"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:text="My Photo"
                    android:ems="10"
                    android:id="@+id/editPhoto"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="I want to say to people..."
                    android:ems="10"
                    android:id="@+id/editQuote" android:inputType="text"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:text="Instagram Username"
                    android:ems="10"
                    android:id="@+id/editInstUsername"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:text="Facebook Username"
                    android:ems="10"
                    android:id="@+id/editFbUsername"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:text="Twitter Username"
                    android:ems="10"
                    android:id="@+id/editTwUsername3"/>
            <Button
                    android:text="@string/donate_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/button" android:layout_marginTop="10sp"/>
        </LinearLayout>
    </ScrollView>
    <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/nav_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:background="?android:attr/windowBackground"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:menu="@menu/bottom_nav_menu"/>

    <androidx.fragment.app.FragmentContainerView
            android:id="@+id/nav_host_fragment_activity_main"
            android:name="androidx.navigation.fragment.NavHostFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:defaultNavHost="true"
            app:layout_constraintBottom_toTopOf="@id/nav_view"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navGraph="@navigation/mobile_navigation"
    />

</androidx.constraintlayout.widget.ConstraintLayout>